add day 1, Invert Binary Tree

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 
 ### DotnetCore ###
 # .NET Core build folders
-/bin
-/obj
+bin/
+obj/
 
 # Common node modules locations
 /node_modules
@@ -24,3 +24,4 @@
 .history
 
 # End of https://www.gitignore.io/api/dotnetcore,visualstudiocode
+.vscode/
